# mcp-server-servicenow

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  server.json
.claude/skills/exploring-tables/: SKILL.md
.claude/skills/reviewing-update-sets/: SKILL.md
.claude/skills/servicenow-cmdb/: SKILL.md
.claude/skills/triaging-incidents/: SKILL.md
.claude/skills/triaging-incidents/references/: incident-fields.md
.github/workflows/: publish-mcp.yml
src/servicenow_mcp/: __init__.py  cli.py  resources.py  server.py
src/servicenow_mcp/auth/: auth_manager.py  sn_oauth_provider.py  sn_token_verifier.py
src/servicenow_mcp/tools/: cmdb_tools.py  system_tools.py  table_tools.py  update_set_tools.py
src/servicenow_mcp/utils/: config.py  http.py  tool_utils.py
tests/: conftest.py  test_bearer_token.py  test_config.py  test_http.py  test_registry.py  test_resources.py  test_sn_oauth_provider.py  test_sn_token_verifier.py  test_tools.py
tests/integration/: test_pdi_smoke.py
